fix(plc): serialize evidence vectors deterministically
Changelog: n/a: diagnostic evidence tooling only
Guide: n/a
Known-Discrepancies: n/a
S3K-Known-Discrepancies: n/a
Agent-Docs: n/a
Configuration-Docs: n/a
Skills: n/a